--- a/viz/templates/viz/index.html
+++ b/viz/templates/viz/index.html
@@ -22,9 +22,15 @@
 			attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
 		}).addTo(map);
 
-		var data = "{{ data | escapejs }}";
-		L.geoJSON(JSON.parse(data)).addTo(map);
+		var data = JSON.parse("{{ data | escapejs }}");
+		L.geoJSON(data,{
+			onEachFeature : onEachFeature,}
+			).addTo(map);
 		console.log(data)
+
+		function onEachFeature(feature, layer) {
+			layer.bindPopup("<div><img src="+feature.properties.image_thumbnail+"/><h4>Apartment Type: "+feature.properties.Type+"</h4><h4>Price: "+feature.properties.Price+"</h4></div>");
+		};
 	</script>
 </body>
 </html>
